Ticket #11627 (closed defect: fixed)

Opened 3 years ago

Last modified 3 years ago

typo fix: surprizing -> surprising

Reported by: jatupper Owned by:
Priority: normal Milestone:
Component: documentation Version:
Keywords: Cc:
Blocked By: Patch: yes
Blocking:

Description

This patch fixes some "surprizing" typos.

Attachments

Surprising.patch download (4.2 KB) - added by jatupper 3 years ago.

Change History

Changed 3 years ago by jatupper

Changed 3 years ago by VZ

  • status changed from new to closed
  • resolution set to fixed

(In [63154]) No real changes, just fix a typo in comments and documentation.

Use "surprising" instead of (common) "surprizing" misspelling.

Closes #11627.

Note: See TracTickets for help on using tickets.